temp/xor_39387839_stderr.txt
  File "xor_base.py", line 167
    args.activation1=
                    ^
SyntaxError: invalid syntax
